--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,14 @@
 cache/
 out/
 
+# Library files
+lib/
+
 # Ignores development broadcast logs
 !/broadcast
 /broadcast/*/31337/
 /broadcast/**/dry-run/
+/broadcast
 
 # Docs
 docs/
